--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -298,6 +298,90 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./controllers/AuthorizationController.html">src/authorization/authorization.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>AuthorizationController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/AuthorizationService.html">src/authorization/authorization.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>AuthorizationService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/UpdatePermissionsDto.html">src/authorization/dto/update-permissions.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>UpdatePermissionsDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/UpdateRoleDto.html">src/authorization/dto/update-role.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>UpdateRoleDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#PermissionGuard">src/authorization/permission.guard.ts</a>
+            </td>
+            <td>variable</td>
+            <td>PermissionGuard</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#RoleGuard">src/authorization/role.guard.ts</a>
+            </td>
+            <td>variable</td>
+            <td>RoleGuard</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#Permission">src/authorization/types/permission.type.ts</a>
+            </td>
+            <td>variable</td>
+            <td>Permission</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/TypeOrmConfig.html">src/config/typeorm.config.ts</a>
             </td>
             <td>class</td>
@@ -334,13 +418,25 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/EmailService.html">src/email/email.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>EmailService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/EnvironmentVariables.html">src/env.validation.ts</a>
             </td>
             <td>class</td>
             <td>EnvironmentVariables</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/14)</span>
+                <span class="coverage-count">(0/24)</span>
             </td>
         </tr>
         <tr class="low">
@@ -574,6 +670,90 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/ConfirmEmailDto.html">src/features/email-confirmation/dto/confirm-email.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>ConfirmEmailDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/EmailConfirmationController.html">src/features/email-confirmation/email-confirmation.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>EmailConfirmationController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/EmailConfirmationService.html">src/features/email-confirmation/email-confirmation.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>EmailConfirmationService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/VerificationTokenPayload.html">src/features/email-confirmation/verification-token-payload.interface.ts</a>
+            </td>
+            <td>interface</td>
+            <td>VerificationTokenPayload</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/EmailScheduleDto.html">src/features/email-scheduling/dto/email-schedule.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>EmailScheduleDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/EmailSchedulingController.html">src/features/email-scheduling/email-scheduling.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>EmailSchedulingController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/EmailSchedulingService.html">src/features/email-scheduling/email-scheduling.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>EmailSchedulingService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./entitys/PrivateFile.html">src/features/files/entities/private-file.entity.ts</a>
             </td>
             <td>entity</td>
@@ -614,6 +794,42 @@
             </td>
             <td>injectable</td>
             <td>FilesService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/TokenVerificationDto.html">src/features/google-authentication/dto/token-verification.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>TokenVerificationDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/GoogleAuthenticationController.html">src/features/google-authentication/google-authentication.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>GoogleAuthenticationController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/GoogleAuthenticationService.html">src/features/google-authentication/google-authentication.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>GoogleAuthenticationService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/8)</span>
@@ -1096,7 +1312,7 @@
             <td>UsersController</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/11)</span>
+                <span class="coverage-count">(0/12)</span>
             </td>
         </tr>
         <tr class="low">
@@ -1108,7 +1324,7 @@
             <td>UsersService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/20)</span>
+                <span class="coverage-count">(0/23)</span>
             </td>
         </tr>
         <tr class="low">
