--- a/documentation/miscellaneous/enumerations.html
+++ b/documentation/miscellaneous/enumerations.html
@@ -61,10 +61,19 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#CategoriesPermission" title="src/features/categories/enums/categoriesPermission.enum.ts" ><b>CategoriesPermission</b>&nbsp;&nbsp;&nbsp;(src/.../categoriesPermission.enum.ts)</a>
+                        </li>
+                        <li>
                             <a href="#Environment" title="src/env.validation.ts" ><b>Environment</b>&nbsp;&nbsp;&nbsp;(src/.../env.validation.ts)</a>
                         </li>
                         <li>
                             <a href="#PostgresErrorCode" title="src/database/postgres-error-codes.enum.ts" ><b>PostgresErrorCode</b>&nbsp;&nbsp;&nbsp;(src/.../postgres-error-codes.enum.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#ProductsPermission" title="src/features/products/enums/productsPermission.enum.ts" ><b>ProductsPermission</b>&nbsp;&nbsp;&nbsp;(src/.../productsPermission.enum.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#Role" title="src/authorization/role.enum.ts" ><b>Role</b>&nbsp;&nbsp;&nbsp;(src/.../role.enum.ts)</a>
                         </li>
                     </ul>
                 </td>
@@ -73,6 +82,59 @@
     </table>
 </section>
 
+    <h3>src/features/categories/enums/categoriesPermission.enum.ts</h3>
+    <section>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="CategoriesPermission"></a>
+                        <span class="name "><b>CategoriesPermission</b><a href="#CategoriesPermission"><span class="icon ion-ios-link"></span></a></span>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;CreateCategory
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>CreateCategory</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;UpdateCategory
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>UpdateCategory</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;DeleteCategory
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>DeleteCategory</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;RestoreCategory
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>RestoreCategory</code>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
     <h3>src/env.validation.ts</h3>
     <section>
         <table class="table table-sm table-bordered">
@@ -144,6 +206,92 @@
                         <tr>
                             <td class="col-md-4">
                                 <i>Value : </i><code>23505</code>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
+    <h3>src/features/products/enums/productsPermission.enum.ts</h3>
+    <section>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="ProductsPermission"></a>
+                        <span class="name "><b>ProductsPermission</b><a href="#ProductsPermission"><span class="icon ion-ios-link"></span></a></span>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;CreateProduct
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>CreateProduct</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;UpdateProduct
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>UpdateProduct</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;DeleteProduct
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>DeleteProduct</code>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
+    <h3>src/authorization/role.enum.ts</h3>
+    <section>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="Role"></a>
+                        <span class="name "><b>Role</b><a href="#Role"><span class="icon ion-ios-link"></span></a></span>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;SuperAdmin
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>SuperAdmin</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;User
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>User</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;Admin
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>Admin</code>
                             </td>
                         </tr>
             </tbody>
