--- a/documentation/controllers/UsersController.html
+++ b/documentation/controllers/UsersController.html
@@ -113,6 +113,10 @@
                             </li>
                             <li>
                                     <span class="modifier">Async</span>
+                                <a href="#getAvatar" >getAvatar</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#getPrivateFile" >getPrivateFile</a>
                             </li>
                         </ul>
@@ -159,8 +163,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="187"
-                            class="link-to-prism">src/features/users/users.controller.ts:187</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="125"
+                            class="link-to-prism">src/features/users/users.controller.ts:125</a></div>
                 </td>
             </tr>
 
@@ -247,8 +251,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="122"
-                            class="link-to-prism">src/features/users/users.controller.ts:122</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="159"
+                            class="link-to-prism">src/features/users/users.controller.ts:159</a></div>
                 </td>
             </tr>
 
@@ -335,8 +339,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="146"
-                            class="link-to-prism">src/features/users/users.controller.ts:146</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="183"
+                            class="link-to-prism">src/features/users/users.controller.ts:183</a></div>
                 </td>
             </tr>
 
@@ -423,8 +427,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="211"
-                            class="link-to-prism">src/features/users/users.controller.ts:211</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="247"
+                            class="link-to-prism">src/features/users/users.controller.ts:247</a></div>
                 </td>
             </tr>
 
@@ -511,8 +515,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="228"
-                            class="link-to-prism">src/features/users/users.controller.ts:228</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="142"
+                            class="link-to-prism">src/features/users/users.controller.ts:142</a></div>
                 </td>
             </tr>
 
@@ -587,8 +591,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="247"
-                            class="link-to-prism">src/features/users/users.controller.ts:247</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="273"
+                            class="link-to-prism">src/features/users/users.controller.ts:273</a></div>
                 </td>
             </tr>
 
@@ -674,8 +678,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="47"
-                            class="link-to-prism">src/features/users/users.controller.ts:47</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="49"
+                            class="link-to-prism">src/features/users/users.controller.ts:49</a></div>
                 </td>
             </tr>
 
@@ -718,8 +722,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="77"
-                            class="link-to-prism">src/features/users/users.controller.ts:77</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="67"
+                            class="link-to-prism">src/features/users/users.controller.ts:67</a></div>
                 </td>
             </tr>
 
@@ -796,8 +800,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="59"
-                            class="link-to-prism">src/features/users/users.controller.ts:59</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="202"
+                            class="link-to-prism">src/features/users/users.controller.ts:202</a></div>
                 </td>
             </tr>
 
@@ -821,6 +825,108 @@
                                     <td>request</td>
                                     <td>
                                                 <code><a href="../interfaces/RequestWithUser.html" target="_self" >RequestWithUser</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>    <code>unknown</code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="getAvatar"></a>
+                    <span class="name">
+                        <span class="modifier">Async</span>
+                        <span ><b>getAvatar</b></span>
+                        <a href="#getAvatar"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>getAvatar(userId: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>, response: Response, request: Request)</code>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <b>Decorators : </b>
+                    <br />
+                    <code>@Get(&#x27;:userId/avatar&#x27;)<br /></code>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="72"
+                            class="link-to-prism">src/features/users/users.controller.ts:72</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>userId</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>response</td>
+                                    <td>
+                                            <code>Response</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>request</td>
+                                    <td>
+                                            <code>Request</code>
                                     </td>
 
                                     <td>
@@ -874,8 +980,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="97"
-                            class="link-to-prism">src/features/users/users.controller.ts:97</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="222"
+                            class="link-to-prism">src/features/users/users.controller.ts:222</a></div>
                 </td>
             </tr>
 
@@ -956,16 +1062,18 @@
   Delete,
   Get,
   Param,
+  ParseIntPipe,
   Post,
   Req,
   Res,
+  StreamableFile,
   UploadedFile,
   UseGuards,
   UseInterceptors,
 } from &#x27;@nestjs/common&#x27;;
 import { RequestWithUser } from &#x27;../../authentication/request-with-user.interface&#x27;;
 import { UsersService } from &#x27;./users.service&#x27;;
-import { Express, Response } from &#x27;express&#x27;;
+import { Express, Response, Request } from &#x27;express&#x27;;
 import { FileInterceptor } from &#x27;@nestjs/platform-express&#x27;;
 import { JwtAuthenticationGuard } from &#x27;../../authentication/jwt-authentication.guard&#x27;;
 import { FindOneParams } from &#x27;../../utils/dto/find-one-params.dto&#x27;;
@@ -1000,18 +1108,6 @@ export class UsersController {
     return this.usersService.getAllUsers();
   }
 
-  @Get(&#x27;files&#x27;)
-  @ApiOkResponse({
-    description:
-      &#x27;All the private files of the user have been fetched successfully!&#x27;,
-    type: [FileResponseDto],
-  })
-  @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
-  @UseGuards(JwtAuthenticationGuard)
-  async getAllPrivateFiles(@Req() request: RequestWithUser) {
-    return this.usersService.getAllPrivateFiles(request.user.id);
-  }
-
   @Get(&#x27;:email&#x27;)
   @ApiParam({
     name: &#x27;email&#x27;,
@@ -1030,32 +1126,79 @@ export class UsersController {
     return this.usersService.getByEmail(email);
   }
 
-  @Get(&#x27;files/:id&#x27;)
-  @ApiParam({
-    name: &#x27;id&#x27;,
-    required: true,
-    description: &#x27;Should be an id of a file that exists in the database&#x27;,
-    type: String,
+  @Get(&#x27;:userId/avatar&#x27;)
+  async getAvatar(
+    @Param(&#x27;userId&#x27;, ParseIntPipe) userId: number,
+    @Res({ passthrough: true }) response: Response,
+    @Req() request: Request,
+  ) {
+    const { file, fileMetadata } &#x3D; await this.usersService.getAvatar(userId);
+
+    const tag &#x3D; &#x60;W/&quot;file-id-${fileMetadata.id}&quot;&#x60;;
+
+    response.set({
+      &#x27;Content-Disposition&#x27;: &#x60;inline; filename&#x3D;&quot;${fileMetadata.filename}&quot;&#x60;,
+      &#x27;Content-Type&#x27;: fileMetadata.mimetype,
+      ETag: tag,
+    });
+
+    if (request.headers[&#x27;if-none-match&#x27;] &#x3D;&#x3D;&#x3D; tag) {
+      response.status(304);
+      return;
+    }
+
+    return new StreamableFile(file);
+  }
+
+  @Post(&#x27;avatar&#x27;)
+  @ApiConsumes(&#x27;multipart/form-data&#x27;)
+  @ApiBody({
+    description: &#x27;A new avatar for the user&#x27;,
+    type: FileUploadDto,
   })
-  @ApiOkResponse({
-    description: &#x27;A private file of the user has been fetched successfully!&#x27;,
-    type: FileResponseDto,
-  })
-  @ApiNotFoundResponse({
-    description: &#x27;A file with given id does not exist.&#x27;,
+  @ApiCreatedResponse({
+    description: &#x27;An avatar of the user has been added successfully!&#x27;,
+    type: PublicFile,
   })
   @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
   @UseGuards(JwtAuthenticationGuard)
-  async getPrivateFile(
+  @UseInterceptors(
+    LocalFilesInterceptor({
+      fieldName: &#x27;file&#x27;,
+      path: &#x27;/avatars&#x27;,
+      fileFilter: (request, file, callback) &#x3D;&gt; {
+        if (!file.mimetype.includes(&#x27;image&#x27;)) {
+          return callback(
+            new BadRequestException(&#x27;Provide a valid image&#x27;),
+            false,
+          );
+        }
+        callback(null, true);
+      },
+      limits: {
+        fileSize: Math.pow(1024, 2), // 1 MB
+      },
+    }),
+  )
+  addAvatar(
     @Req() request: RequestWithUser,
-    @Param() { id }: FindOneParams,
-    @Res() response: Response,
+    @UploadedFile() file: Express.Multer.File,
   ) {
-    const file &#x3D; await this.usersService.getPrivateFile(
-      request.user.id,
-      Number(id),
-    );
-    file.stream.pipe(response);
+    return this.usersService.addAvatar(request.user.id, {
+      path: file.path,
+      filename: file.originalname,
+      mimetype: file.mimetype,
+    });
+  }
+
+  @Delete(&#x27;avatar&#x27;)
+  @ApiOkResponse({
+    description: &#x27;Avatar for this user has been deleted successfully!&#x27;,
+  })
+  @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
+  @UseGuards(JwtAuthenticationGuard)
+  deleteAvatar(@Req() request: RequestWithUser) {
+    return this.usersService.deleteAvatar(request.user.id);
   }
 
   @Post(&#x27;avatar/amazonS3&#x27;)
@@ -1106,45 +1249,44 @@ export class UsersController {
     );
   }
 
-  @Post(&#x27;avatar&#x27;)
-  @ApiConsumes(&#x27;multipart/form-data&#x27;)
-  @ApiBody({
-    description: &#x27;A new avatar for the user&#x27;,
-    type: FileUploadDto,
-  })
-  @ApiCreatedResponse({
-    description: &#x27;An avatar of the user has been added successfully!&#x27;,
-    type: PublicFile,
+  @Get(&#x27;files&#x27;)
+  @ApiOkResponse({
+    description:
+      &#x27;All the private files of the user have been fetched successfully!&#x27;,
+    type: [FileResponseDto],
   })
   @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
   @UseGuards(JwtAuthenticationGuard)
-  @UseInterceptors(
-    LocalFilesInterceptor({
-      fieldName: &#x27;file&#x27;,
-      path: &#x27;/avatars&#x27;,
-      fileFilter: (request, file, callback) &#x3D;&gt; {
-        if (!file.mimetype.includes(&#x27;image&#x27;)) {
-          return callback(
-            new BadRequestException(&#x27;Provide a valid image&#x27;),
-            false,
-          );
-        }
-        callback(null, true);
-      },
-      limits: {
-        fileSize: Math.pow(1024, 2), // 1 MB
-      },
-    }),
-  )
-  addAvatar(
+  async getAllPrivateFiles(@Req() request: RequestWithUser) {
+    return this.usersService.getAllPrivateFiles(request.user.id);
+  }
+
+  @Get(&#x27;files/:id&#x27;)
+  @ApiParam({
+    name: &#x27;id&#x27;,
+    required: true,
+    description: &#x27;Should be an id of a file that exists in the database&#x27;,
+    type: String,
+  })
+  @ApiOkResponse({
+    description: &#x27;A private file of the user has been fetched successfully!&#x27;,
+    type: FileResponseDto,
+  })
+  @ApiNotFoundResponse({
+    description: &#x27;A file with given id does not exist.&#x27;,
+  })
+  @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
+  @UseGuards(JwtAuthenticationGuard)
+  async getPrivateFile(
     @Req() request: RequestWithUser,
-    @UploadedFile() file: Express.Multer.File,
+    @Param() { id }: FindOneParams,
+    @Res() response: Response,
   ) {
-    return this.usersService.addAvatar(request.user.id, {
-      path: file.path,
-      filename: file.originalname,
-      mimetype: file.mimetype,
-    });
+    const file &#x3D; await this.usersService.getPrivateFile(
+      request.user.id,
+      Number(id),
+    );
+    file.stream.pipe(response);
   }
 
   @Post(&#x27;files&#x27;)
@@ -1169,16 +1311,6 @@ export class UsersController {
       file.buffer,
       file.originalname,
     );
-  }
-
-  @Delete(&#x27;avatar&#x27;)
-  @ApiOkResponse({
-    description: &#x27;Avatar for this user has been deleted successfully!&#x27;,
-  })
-  @ApiUnauthorizedResponse({ description: &#x27;Unauthorized.&#x27; })
-  @UseGuards(JwtAuthenticationGuard)
-  deleteAvatar(@Req() request: RequestWithUser) {
-    return this.usersService.deleteAvatar(request.user.id);
   }
 
   @Delete(&#x27;files/:id&#x27;)
