--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -66,11 +66,15 @@
         <li>
             <b>@nestjs/platform-express</b> : ^8.4.4</li>
         <li>
+            <b>@nestjs/schedule</b> : ^2.0.1</li>
+        <li>
             <b>@nestjs/swagger</b> : ^5.2.1</li>
         <li>
             <b>@nestjs/terminus</b> : ^8.0.6</li>
         <li>
             <b>@nestjs/typeorm</b> : ^8.0.3</li>
+        <li>
+            <b>@types/nodemailer</b> : ^6.4.4</li>
         <li>
             <b>aws-sdk</b> : ^2.1128.0</li>
         <li>
@@ -81,6 +85,10 @@
             <b>class-validator</b> : ^0.13.2</li>
         <li>
             <b>cookie-parser</b> : ^1.4.6</li>
+        <li>
+            <b>googleapis</b> : ^100.0.0</li>
+        <li>
+            <b>nodemailer</b> : ^6.7.5</li>
         <li>
             <b>otplib</b> : ^12.0.1</li>
         <li>
