--- a/documentation/entities/User.html
+++ b/documentation/entities/User.html
@@ -110,6 +110,16 @@
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
+                                    <span class="modifier">Optional</span>
+                                <a href="#isEmailConfirmed" >isEmailConfirmed</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
+                                    <span class="modifier">Optional</span>
+                                <a href="#isRegisteredWithGoogle" >isRegisteredWithGoogle</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#isTwoFactorAuthenticationEnabled" >isTwoFactorAuthenticationEnabled</a>
                             </li>
                             <li>
@@ -119,6 +129,11 @@
                             <li>
                                     <span class="modifier">Public</span>
                                 <a href="#password" >password</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
+                                    <span class="modifier">Optional</span>
+                                <a href="#permissions" >permissions</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -134,6 +149,11 @@
                                     <span class="modifier">Public</span>
                                     <span class="modifier">Optional</span>
                                 <a href="#products" >products</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
+                                    <span class="modifier">Optional</span>
+                                <a href="#role" >role</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -188,7 +208,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/features/users/entities/user.entity.ts:35</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">src/features/users/entities/user.entity.ts:55</a></div>
                         </td>
                     </tr>
 
@@ -225,7 +245,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">src/features/users/entities/user.entity.ts:67</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/features/users/entities/user.entity.ts:87</a></div>
                         </td>
                     </tr>
 
@@ -262,7 +282,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">src/features/users/entities/user.entity.ts:71</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">src/features/users/entities/user.entity.ts:91</a></div>
                         </td>
                     </tr>
 
@@ -299,7 +319,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/features/users/entities/user.entity.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">src/features/users/entities/user.entity.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -335,7 +355,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/features/users/entities/user.entity.ts:22</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/features/users/entities/user.entity.ts:24</a></div>
                         </td>
                     </tr>
 
@@ -372,7 +392,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="74" class="link-to-prism">src/features/users/entities/user.entity.ts:74</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="94" class="link-to-prism">src/features/users/entities/user.entity.ts:94</a></div>
                         </td>
                     </tr>
 
@@ -409,7 +429,81 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/features/users/entities/user.entity.ts:19</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/features/users/entities/user.entity.ts:21</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="isEmailConfirmed"></a>
+                    <span class="name">
+                            <span class="modifier">Public</span>
+                            <span class="modifier">Optional</span>
+                        <span ><b>isEmailConfirmed</b></span>
+                        <a href="#isEmailConfirmed"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <b>Decorators : </b>
+                        <br />
+                        <code>
+                            @Column({default: false})<br />
+                        </code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/features/users/entities/user.entity.ts:27</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="isRegisteredWithGoogle"></a>
+                    <span class="name">
+                            <span class="modifier">Public</span>
+                            <span class="modifier">Optional</span>
+                        <span ><b>isRegisteredWithGoogle</b></span>
+                        <a href="#isRegisteredWithGoogle"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <b>Decorators : </b>
+                        <br />
+                        <code>
+                            @Column({default: false})<br />
+                        </code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="107" class="link-to-prism">src/features/users/entities/user.entity.ts:107</a></div>
                         </td>
                     </tr>
 
@@ -445,7 +539,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="84" class="link-to-prism">src/features/users/entities/user.entity.ts:84</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="104" class="link-to-prism">src/features/users/entities/user.entity.ts:104</a></div>
                         </td>
                     </tr>
 
@@ -481,7 +575,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/features/users/entities/user.entity.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/features/users/entities/user.entity.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -517,7 +611,44 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/features/users/entities/user.entity.ts:39</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">src/features/users/entities/user.entity.ts:59</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="permissions"></a>
+                    <span class="name">
+                            <span class="modifier">Public</span>
+                            <span class="modifier">Optional</span>
+                        <span ><b>permissions</b></span>
+                        <a href="#permissions"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="../miscellaneous/variables.html#Permission" target="_self" >Permission[]</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <b>Decorators : </b>
+                        <br />
+                        <code>
+                            @Column({type: &#x27;enum&#x27;, enum: Permission, array: true, default: undefined})<br />
+                        </code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/features/users/entities/user.entity.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -554,7 +685,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/features/users/entities/user.entity.ts:28</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">src/features/users/entities/user.entity.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -591,7 +722,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/features/users/entities/user.entity.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/features/users/entities/user.entity.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -628,7 +759,44 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">src/features/users/entities/user.entity.ts:77</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="97" class="link-to-prism">src/features/users/entities/user.entity.ts:97</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="role"></a>
+                    <span class="name">
+                            <span class="modifier">Public</span>
+                            <span class="modifier">Optional</span>
+                        <span ><b>role</b></span>
+                        <a href="#role"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="../miscellaneous/enumerations.html#Role" target="_self" >Role</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <b>Decorators : </b>
+                        <br />
+                        <code>
+                            @Column({type: &#x27;enum&#x27;, enum: Role, default: undefined})<br />
+                        </code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/features/users/entities/user.entity.ts:34</a></div>
                         </td>
                     </tr>
 
@@ -665,7 +833,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">src/features/users/entities/user.entity.ts:81</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="101" class="link-to-prism">src/features/users/entities/user.entity.ts:101</a></div>
                         </td>
                     </tr>
 
@@ -690,7 +858,9 @@ import { Address } from &#x27;./address.entity&#x27;;
 import { Post } from &#x27;../../posts/entities/post.entity&#x27;;
 import { PrivateFile } from &#x27;../../files/entities/private-file.entity&#x27;;
 import { Product } from &#x27;../../products/entities/product.entity&#x27;;
-import { LocalFile } from &#x27;src/features/local-files/entities/local-file.entity&#x27;;
+import { LocalFile } from &#x27;../../../features/local-files/entities/local-file.entity&#x27;;
+import { Role } from &#x27;../../../authorization/role.enum&#x27;;
+import { Permission } from &#x27;../../../authorization/types/permission.type&#x27;;
 
 @Entity()
 export class User {
@@ -699,6 +869,24 @@ export class User {
 
   @Column({ unique: true })
   public email: string;
+
+  @Column({ default: false })
+  public isEmailConfirmed?: boolean;
+
+  @Column({
+    type: &#x27;enum&#x27;,
+    enum: Role,
+    default: Role.User,
+  })
+  public role?: Role;
+
+  @Column({
+    type: &#x27;enum&#x27;,
+    enum: Permission,
+    array: true,
+    default: [],
+  })
+  public permissions?: Permission[];
 
   @Column()
   public name: string;
@@ -761,6 +949,9 @@ export class User {
 
   @Column({ default: false })
   public isTwoFactorAuthenticationEnabled: boolean;
+
+  @Column({ default: false })
+  public isRegisteredWithGoogle?: boolean;
 }
 </code></pre>
     </div>
